<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    android:paddingVertical="30dp"
    tools:context=".Signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="30dp"
        android:layout_gravity="start"
        style="@style/App.Input.Text"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App.Input.Layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            style="@style/App.Input.Layout"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginTop="30dp"
        android:layout_gravity="start"
        style="@style/App.Input.Text"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App.Input.Layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            style="@style/App.Input.Layout"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:layout_marginTop="30dp"
        android:layout_gravity="start"
        style="@style/App.Input.Text"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App.Input.Layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name_hint"
            style="@style/App.Input.Layout"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="30dp"
        android:layout_gravity="start"
        style="@style/App.Input.Text"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        style="@style/App.Input.Layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            style="@style/App.Input.Layout"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginTop="30dp"
        android:layout_gravity="start"
        style="@style/App.Input.Text"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        style="@style/App.Input.Layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            style="@style/App.Input.Layout"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"/>
</LinearLayout>