...
    <string name="sort_by">Sort by</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="home">Home</string>
    <string name="analysis">Analysis</string>
    <string name="budgets">Budgets</string>
    <string name="profile">Profile</string>
    <string name="amount">Amount</string>
    <string name="change">Change</string>
    <string name="wallet">Wallet</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="signout">Sign out</string>
...
    <string name="retake">Retake</string>
    <string name="scan">Scan</string>
    <string name="expense_chart">Expense Chart</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="new_entry">New Entry</string>
    <string name="sign_up">Sign Up</string>
    <string name="from">From</string>
    <string name="redirect_to_signup">Don\'t have an account? <u>Sign up</u></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">Enter your password</string>
    <string name="phone_number_hint">(+61) 401 – 234567</string>
    <string name="full_name_hint">Enter your full name</string>
...
