<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_black"
        android:paddingBottom="86dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="25dp"
        android:layout_gravity="end|bottom"
        app:backgroundTint="@color/green"
        app:srcCompat="@drawable/add_icon"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:tint="@color/off_black"
        app:rippleColor="@color/white"
        app:elevation="10dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/scrollView"
        app:layout_anchorGravity="bottom"
        app:labelVisibilityMode="labeled"
        app:elevation="0dp"
        app:backgroundTint="@color/lighter_black"
        app:menu="@menu/navigation_bar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>