...
        android:textSize="16sp"
        android:textColor="@color/green"
        android:textFontWeight="500"
        android:layout_gravity="end"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
...
